# semantic-matcher

./: Makefile  README.md  setup.cfg
.github/workflows/: unit_tests.yml
src/semanticmatcher/: match.py  search.py  tables.py  utils.py
src/tablematcher/: match.py  search.py
tests/: test_search.py  test_tables.py
