[metadata]
name= semanticmatcher
description = Semantic matching of columns and tables
author = Aayush Choudhury
version = 0.0.0
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.9

[options]
packages =
    semanticmatcher
install_requires =
    pandas
    faiss-cpu
extra_requires = 
    faiss-gpu
python_requires = >=3.8
package_dir =
    =src
zip_safe = no